--- a/demo.yaml
+++ b/demo.yaml
@@ -1,6 +1,6 @@
 categories:
   property: CHECK( init(main()), LTL(G ! call(reach_error())) )
-externs:
+features:
 - line: 3
   column: 22
   function: __assert_fail
